Ensure tab don't have scrollbar

--- a/view/tabView/tab.css
+++ b/view/tabView/tab.css
@@ -2,6 +2,7 @@ html {
     height: 100%;
     background: --vscode-panel-background;
     background: --vscode-terminal-background;
+    overflow: hidden;
 }
 
 body {
